--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </li>
       </ul>
     </div>
-    <section class="contact bgDark pt-3">
+    <footer class="contact bgDark pt-3">
       <div class="wrap text-center">
         <h2 class="title titleDark pb-1 ">聯絡方式<span class="subtitle subtitleDark ml-2">CONTACT METHODS</span></h2>
         <ul class="contactList">
@@ -89,6 +89,6 @@
           </li>
         </ul>
       </div>
-    </section>
+    </footer>
 </body>
 </html>
